--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-<title>Hola Cesium!!!
+<title>
+    Hola Cesium!!!
 </title>
    
     <script src="Build/Cesium/Cesium.js" type="text/javascript"></script>
